Try to use javac on build.